--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
             <a href="#top"><span><img src="images/double-up-arrow.png" alt="Scroll back to Top"></span></a>
        	</div>
 	</footer>
-	
-<script type="text/javascript" src="js/scripts.js"></script>
+
+	<!-- Linking JavaScript file -->
+	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
 </html>
